# knn_ensemble_research

./: .gitignore  CMakeLists.txt  FileUtils.hpp  KNNEnsembleLin.hpp  KNNEnsembleOptm.h  KNNEnsembleOptmDSM.h  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  SimulatedAnnealing1.cpp  SimulatedAnnealing1.hpp  experiment.cpp  globals.h  ind_accs.cpp  kNNEnsemble.hpp  kNNEnsembleW.hpp  kNNEnsembleWPDSM.hpp  kNNEnsembleWSS.hpp  linalg_test.cpp  main.cpp  mse_optimization  res_knn_HV.cpp  res_knn_est_acc_HV.cpp  res_knn_est_acc_WPDSM.cpp  res_knn_ind_acc.cpp  res_knn_lin.cpp  res_knn_optm.cpp  res_knn_optm_dsm.cpp  res_knn_optm_test.cpp  res_knn_softv.cpp  res_knn_wss.cpp  res_knn_x0.cpp  result_rsm_hassanat.ods  result_rsm_hassanat.xlsx  results.ods  test.cpp  thread_pool.hpp  threads.cpp  uPrincipal.pas  utils.cpp  utils.h
alglib-3.17.0/: CMakeLists.txt
armadillo-10.6.1/: CMakeLists.txt  docs.html
armadillo-10.6.1/tests2/: init_fill.cpp
datasets/: ClaveVectors_Firm-Teacher_Model.txt  ThoraricSurgery.arff  biodegradation.csv  biodegradetion.csv  blobs_2d.csv  blobs_3d.csv  bupa.data  ionosphere.data  iris.data  iris_mult.csv  pima.data  sonar.data  vehicle.csv  wdbc.data  wine.data
include/: globals.h
include/Experiment/: Experiment.hpp
include/SimulatedAnnealing/: SimulatedAnnealing.hpp  kNNEnsembleW.hpp
legacy/: test.cpp
playground/: test1.cpp
results/: individual_accs.csv  qptest.txt  results.ods  results_optim_new_method.csv  results_optim_new_method_10folds.csv  results_optim_new_method_3folds.csv  results_optim_new_method_5folds.csv  results_optim_new_method_80_201.csv  results_optim_new_method_teste.csv  results_optim_preweights_new_method.csv  results_optim_preweights_new_method_10folds.csv  results_optim_preweights_new_method_3folds.csv  results_optim_preweights_new_method_5folds.csv  results_rsm_euclidean.ods  results_weights_mse_optim.xlsx  results_weights_mse_optim_notrain.xlsx  results_weights_mse_optim_train.xlsx
results/execution/: opt_fetch_results.ipynb  opt_fetch_results.py  opt_multacc_fetch_results.py  opt_only_one_opt_fetch_results - Copia.py  opt_only_one_opt_multacc_fetch_results.py  output_hv.txt  output_optm_dsm_fetch_results.ipynb  output_optm_dsm_fetched.csv  output_qpoptm.txt  output_qpoptm_multacc.txt  output_qpoptm_only_one_opt.txt  output_qpoptm_only_one_opt_dsm_notrain.txt  output_qpoptm_only_one_opt_multacc.txt  output_qpoptm_only_one_opt_multacc_train.txt  output_softv_acc.txt  output_wss.txt  results_hv.csv  results_qpoptm.csv  results_qpoptm_multacc.csv  results_qpoptm_only_one_opt.csv  results_qpoptm_only_one_opt1.csv  results_qpoptm_only_one_opt_dsm.csv  results_qpoptm_only_one_opt_dsm_train.csv  results_qpoptm_only_one_opt_dsm_train1.csv  results_qpoptm_only_one_opt_multacc.csv  results_softv_acc.csv  results_wss.csv
results/execution/knn_optm_res/: 3_knn_optm_res.csv  3_multacc_knn_optm_res.csv  3_only_one_opt_knn_optm_res.csv  5_knn_optm_res.csv  5_multacc_knn_optm_res.csv  5_only_one_opt_knn_optm_res.csv  5_only_one_opt_multacc_knn_optm_res.csv  7_knn_optm_res.csv  7_multacc_knn_optm_res.csv  7_only_one_opt_knn_optm_res.csv  7_only_one_opt_multacc_knn_optm_res.csv  knn_optm_res.xlsx
results/full_ind/: results_optim_new_method_70_30.csv  results_optim_new_method_80_20.csv
results/no_full_ind/: results_optim_new_method_10_90.csv  results_optim_new_method_20_80.csv  results_optim_new_method_30_70.csv  results_optim_new_method_50_50.csv  results_optim_new_method_70_30.csv  results_optim_new_method_80_20.csv  results_optim_new_method_90_10.csv
results/wss/: ThoraricSurgery.csv  biodegradation.csv  bupa.csv  ionosphere.csv  pima.csv  seismic-bumps.csv  sonar.csv  vehicle.csv  wdbc.csv  wss_grid_search_res.xlsx
results_1/ThoraricSurgery/: results_k_3.json  results_k_5.json
results_1/biodegradation/: results_k_3.json  results_k_5.json  results_k_7.json
results_1/bupa/: results_k_3.json  results_k_5.json  results_k_7.json
results_1/ionosphere/: results_k_3.json  results_k_5.json  results_k_7.json
results_1/pima/: results_k_5.json  results_k_7.json
results_1/seismic-bumps/: results_k_3.json  results_k_5.json  results_k_7.json
results_1/sonar/: results_k_3.json  results_k_5.json  results_k_7.json
results_1/vehicle/: results_k_3.json  results_k_5.json  results_k_7.json
results_1/wdbc/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/ThoraricSurgery/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/biodegradation/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/bupa/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/ionosphere/: results_k_3.json  results_k_7.json
results_2/pima/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/seismic-bumps/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/sonar/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/vehicle/: results_k_3.json  results_k_5.json  results_k_7.json
results_2/wdbc/: results_k_3.json  results_k_5.json  results_k_7.json
results_no_hassanat/ThoraricSurgery/: results_k_3.json  results_k_5.json  results_k_7.json
results_no_hassanat/biodegradation/: results_k_3.json
results_no_hassanat/ionosphere/: results_k_3.json  results_k_7.json
results_no_hassanat/seismic-bumps/: results_k_3.json  results_k_5.json  results_k_7.json
results_no_hassanat/sonar/: results_k_3.json
results_no_hassanat/wdbc/: results_k_3.json  results_k_5.json  results_k_7.json
src/: Experiment.cpp  SimulatedAnnealing.cpp
